feat(panel): Add docked panels with documentation/tests (#3053)
* Add new panel component

* Add tokens

* Add documentation and full width sizing class

* Add documentation and test

* Add more documentation and update snapshots

* Add animation and update snapshots

* Remove example test from filtering since they keep failing on travis

* Update documentation

* Add accessibility blocks to documentation

* Update documentation and snapshots

* Character encode html elements in blockquote

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -83,7 +83,7 @@
   'brand-band/base/index',
 
   // Panels
-  'panels/detail/index',
+  'panels/base/index',
   'panels/filtering/index',
 
   // Popovers
