--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -135,6 +135,9 @@
   // Global Navigation
   'global-navigation/navigation-bar/index',
 
+  // Buider Header
+  'builder-header/base/index',
+
   // Publishers
   'publishers/base/index',
   'publishers/comment/index',
