feat(progress-indicator): add new vertical variant with new class for green success (#3068)
* feat(progress-indicator): add new class annotations for slds-progress__marker_icon-success

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -173,6 +173,7 @@
   // Progress Indicator
   'progress-bar/base/index',
   'progress-indicator/base/index',
+  'progress-indicator/vertical/index',
   'progress-ring/base/index',
 
   // Rich Text Editor
