--- a/packages/design-system/ui/components/progress-bar/base/_index.scss
+++ b/packages/design-system/ui/components/progress-bar/base/_index.scss
@@ -109,3 +109,31 @@
 .slds-progress-bar__value_success {
   background: $progress-bar-color-background-fill-success;
 }
+
+/**
+ * @summary Create a vertical progress bar
+ *
+ * @selector .slds-progress-bar_vertical
+ * @restrict .slds-progress-bar
+ * @modifier
+ */
+.slds-progress-bar_vertical {
+  height: 100%;
+  width: ($progress-bar-height * 4);
+
+  &.slds-progress-bar_x-small {
+    width: $progress-bar-height;
+  }
+
+  &.slds-progress-bar_small {
+    width: ($progress-bar-height * 2);
+  }
+
+  &.slds-progress-bar_medium {
+    width: ($progress-bar-height * 4);
+  }
+
+  &.slds-progress-bar_large {
+    width: ($progress-bar-height * 6);
+  }
+}
