--- a/packages/design-system/ui/components/progress-indicator/base/_index.scss
+++ b/packages/design-system/ui/components/progress-indicator/base/_index.scss
@@ -167,7 +167,7 @@
  * Dot indicator for each step
  *
  * @selector .slds-progress__marker
- * @restrict .slds-progress ol li button
+ * @restrict .slds-progress ol li button, .slds-progress ol li div, .slds-progress ol li span
  * @required
  */
 .slds-progress__marker {
