feat(form-element): Add modifier to reduce vertical space (#3066)
* feat(form-element): Add tightened modifier

* Add snapshots and documentation

* Add snapshots and documentation

* Fix path

* Update snapshots

* Lint

* Make sure examples have unique IDs

* 😢

* Update record detail

* Update AT on edit button

* feat(form-element): Add tests

* Remove unused props

* Update example to use stacked checkbox variant

--- a/packages/design-system/ui/components/checkbox/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox/base/_index.scss
@@ -28,8 +28,13 @@
       flex-direction: column;
     }
 
+    .slds-form-element__label {
+      margin-bottom: $spacing-xx-small;
+    }
+
     .slds-checkbox_faux {
       order: 1;
+      margin-bottom: 1px;
     }
   }
 
@@ -55,7 +60,6 @@
   .slds-form-element__label {
     display: inline;
     vertical-align: middle;
-    font-size: $font-size-medium;
   }
 
   [type="checkbox"] {
