fix(compound-form): Change spacing to use padding so elements dont flow out of containing element (#3088)

--- a/packages/design-system/ui/components/form-layout/compound/_index.scss
+++ b/packages/design-system/ui/components/form-layout/compound/_index.scss
@@ -22,7 +22,7 @@
     }
 
     .slds-form-element + .slds-form-element {
-      margin-left: $spacing-x-small;
+      padding-left: $spacing-x-small;
     }
   }
 
