feat(summary-detail): Create new summary detail component (#3097)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -243,4 +243,7 @@
 
   // Welcome Mat
   'welcome-mat/base/index',
-  'welcome-mat/trailhead-connected/index';
+  'welcome-mat/trailhead-connected/index',
+
+  // Summary Detail
+  'summary-detail/base/index';
