(fix) rich text editor: white background on error (#3108)

--- a/packages/design-system/ui/components/rich-text-editor/base/_index.scss
+++ b/packages/design-system/ui/components/rich-text-editor/base/_index.scss
@@ -99,6 +99,16 @@
  */
 .slds-rich-text-editor.slds-has-error {
   border: $border-width-thick solid $color-border-error;
+
+  .slds-input {
+    box-shadow: none;
+  }
+
+  .slds-form-element__help {
+    background: $color-background-alt;
+    margin-top: 0;
+    border-radius: $border-radius-medium;
+  }
 }
 
 /**
