Fix(datepicker): Prevent input error styling from applying to datepicker select (#3119)

--- a/packages/design-system/ui/components/datepickers/base/_index.scss
+++ b/packages/design-system/ui/components/datepickers/base/_index.scss
@@ -119,6 +119,11 @@
   }
 }
 
+.slds-has-error .slds-datepicker__filter .slds-select {
+  border: $border-width-thin solid $color-border-input;
+  box-shadow: none;
+}
+
 /**
  * @summary Indicates days that are in previous/next months
  *
