fix(card): update link to take full width of footer (#3116)

--- a/packages/design-system/ui/components/cards/base/_index.scss
+++ b/packages/design-system/ui/components/cards/base/_index.scss
@@ -89,6 +89,15 @@
 }
 
 /**
+* @summary Actionable element within card footer
+* @selector .slds-card__footer-action
+* @restrict .slds-card__footer a
+*/
+.slds-card__footer-action {
+  display: block;
+}
+
+/**
  * Use class if card consumes any form of a tile
  *
  * @selector .slds-card__tile
