fix(button-icon): add selected styling to border inverse variant (#3115)

--- a/packages/design-system/ui/components/button-icons/stateful/_index.scss
+++ b/packages/design-system/ui/components/button-icons/stateful/_index.scss
@@ -25,7 +25,8 @@
 .slds-button--icon-container.slds-is-selected,
 .slds-button_icon-border.slds-is-selected,
 .slds-button--icon-border.slds-is-selected,
-.slds-button_icon-border-filled.slds-is-selected {
+.slds-button_icon-border-filled.slds-is-selected,
+.slds-button_icon-border-inverse.slds-is-selected {
   @include button-brand;
 
   .slds-button__icon {
