fix(path): set minimum width of action button (#3128)

--- a/packages/design-system/ui/components/path/base/_index.scss
+++ b/packages/design-system/ui/components/path/base/_index.scss
@@ -470,6 +470,7 @@
   flex-shrink: 0;
   margin-right: $spacing-small;
   border-radius: $border-radius-pill;
+  min-width: $path-button-width-fixed;
 }
 
 /**
