feat(setup-assistant): Add new Setup Assistant component, new modifiers for progress ring and indicator (#3144)
Add 'slds-progress-ring_large' modifier to make a 32x32 ring
Add 'slds-progress-ring_active-step' to make progress ring blue
Add 'slds-progress__list-bordered' to add borders b/w vertical progress indicator steps

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -246,4 +246,7 @@
   'welcome-mat/trailhead-connected/index',
 
   // Summary Detail
-  'summary-detail/base/index';
+  'summary-detail/base/index',
+
+  // Setup Assistant
+  'setup-assistant/base/index';
