--- a/packages/design-system/ui/components/cards/base/_index.scss
+++ b/packages/design-system/ui/components/cards/base/_index.scss
@@ -12,7 +12,7 @@
 *
 * @name base
 * @selector .slds-card
-* @restrict article, div
+* @restrict article, div, section
 * @variant
 */
 .slds-card {
