--- a/packages/design-system/ui/components/checkbox-button-group/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox-button-group/base/_index.scss
@@ -35,7 +35,7 @@
   /**
    * Creates a custom styled checkbox
    *
-   * @selector .slds-checkbox_faux
+   * @selector .slds-checkbox_button .slds-checkbox_faux
    * @restrict .slds-checkbox__label span, .slds-checkbox_button__label span
    * @required
    */
