--- a/packages/design-system/ui/components/progress-ring/base/_index.scss
+++ b/packages/design-system/ui/components/progress-ring/base/_index.scss
@@ -130,3 +130,35 @@
     background: $color-background-success;
   }
 }
+
+/**
+ * @summary Larger ring size
+ *
+ * @selector .slds-progress-ring_large
+ * @restrict .slds-progress-ring
+ * @modifier
+ * @group size
+ */
+.slds-progress-ring_large {
+  height: $square-icon-large-content;
+  width: $square-icon-large-content;
+
+  .slds-icon {
+    width: $square-icon-medium-content;
+  }
+}
+
+/**
+ * @summary Blue progress ring
+ *
+ * @selector .slds-progress-ring_active-step
+ * @restrict .slds-progress-ring
+ * @modifier
+ * @group color
+ */
+.slds-progress-ring_active-step {
+
+  .slds-progress-ring__path {
+    fill: $progress-color-border-active;
+  }
+}
