--- a/packages/design-system/ui/components/global-header/base/_index.scss
+++ b/packages/design-system/ui/components/global-header/base/_index.scss
@@ -98,20 +98,20 @@
     &__button_icon,
     &__button--icon {
       margin: 0 $spacing-xx-small;
-      color: $brand-header-icon;
+      color: $brand-header-contrast-weak;
 
       .slds-icon {
-        fill: $brand-header-icon; // backwards compatible for old implementations
+        fill: $brand-header-contrast-weak; // backwards compatible for old implementations
       }
 
       &:hover:not(:disabled),
       &:focus {
-        color: $brand-header-icon-active;
+        color: $brand-header-contrast-weak-active;
       }
 
       &:hover:not(:disabled) .slds-icon,
       &:focus .slds-icon {
-        fill: $brand-header-icon-active; // backwards compatible for old implementations
+        fill: $brand-header-contrast-weak-active; // backwards compatible for old implementations
       }
     }
 
@@ -124,13 +124,13 @@
     */
     &__button_icon-actions,
     &__button--icon-actions {
-      background: $brand-header-icon;
+      background: $brand-header-contrast-weak;
       border-radius: $border-radius-medium;
       color: $brand-header;
 
       &:hover,
       &:focus {
-        background-color: $brand-header-icon-active;
+        background-color: $brand-header-contrast-weak-active;
         color: $brand-header;
       }
 
@@ -153,7 +153,7 @@
       .slds-icon,
       .slds-button__icon {
         color: $brand-header;
-        stroke: $brand-header-icon;
+        stroke: $brand-header-contrast-weak;
         stroke-width: $border-stroke-width-thick;
         stroke-linejoin: round;
         stroke-linecap: round;
@@ -164,7 +164,7 @@
       &:focus .slds-icon,
       &:focus .slds-button__icon {
         color: $brand-header;
-        stroke: $brand-header-icon-active;
+        stroke: $brand-header-contrast-weak-active;
       }
 
       /**
@@ -213,7 +213,7 @@
       &.slds-is-disabled .slds-button__icon,
       &:disabled .slds-icon,
       &:disabled .slds-button__icon {
-        stroke: $brand-header-icon-disabled;
+        stroke: $brand-header-contrast-weak-disabled;
       }
     }
 
