--- a/packages/design-system/ui/utilities/visibility/_index.scss
+++ b/packages/design-system/ui/utilities/visibility/_index.scss
@@ -100,7 +100,7 @@
  * @modifier
  */
 .slds-visible {
-  visibility: visible !important;
+  visibility: visible;
 }
 
 /**
@@ -122,7 +122,7 @@
  * @modifier
  */
 .slds-show {
-  display: block !important;
+  display: block;
 }
 
 /**
