fix(setup-assistant): Add parentheses to CSS (#3166)

--- a/packages/design-system/ui/components/setup-assistant/base/_index.scss
+++ b/packages/design-system/ui/components/setup-assistant/base/_index.scss
@@ -82,5 +82,5 @@
  * @restrict .slds-setup-assistant__step div
  */
 .slds-setup-assistant__step-detail {
-  padding-left: $square-icon-large-content + $spacing-small;
+  padding-left: ($square-icon-large-content + $spacing-small);
 }
