fix(combobox): Adjust min/max width of object switcher (#3154)

--- a/packages/design-system/ui/components/combobox/base/_index.scss
+++ b/packages/design-system/ui/components/combobox/base/_index.scss
@@ -364,15 +364,21 @@
  */
 .slds-combobox_object-switcher {
   flex-shrink: 0;
+  font-size: $font-size-text-x-small;
 
   .slds-combobox__input {
-    width: 120px;
+    width: 132px;
     transition: width 80ms linear;
 
     &:focus,
     &.slds-has-focus {
-      width: 150px;
+      width: 160px;
     }
+  }
+
+  .slds-icon {
+    width: $square-icon-small-content;
+    height: $square-icon-small-content;
   }
 }
 
