--- a/packages/design-system/ui/components/lookups/_doc.scss
+++ b/packages/design-system/ui/components/lookups/_doc.scss
@@ -38,7 +38,7 @@
  *
  * @base
  * @name lookups
- * @selector .slds-combobox-lookup
+ * @selector .slds-combobox, .slds-combobox-group
  * @support dev-ready
  * @category experience
  * @type user-input
