--- a/packages/design-system/ui/components/lookups/multi-entity/_index.scss
+++ b/packages/design-system/ui/components/lookups/multi-entity/_index.scss
@@ -5,7 +5,7 @@
  * @summary Container that manages layout when a listbox of pill options sit next to a combobox search input
  *
  * @name multi-entity
- * @selector .slds-has-object-switcher
- * @restrict .slds-combobox-lookup
+ * @selector .slds-combobox-group
+ * @restrict div
  * @variant
  */
