fix(icon): Remove pointer event when icon is located on top of an input (#3159)
* fix(icon): Remove pointer event when icon is located on top of an input

* Update snapshots

--- a/packages/design-system/ui/components/input/base/_index.scss
+++ b/packages/design-system/ui/components/input/base/_index.scss
@@ -129,6 +129,7 @@
     margin-top: (($square-icon-medium-content-alt / 2) * -1);
     line-height: 1;
     border: 0; // Re-aligns icons to center
+    pointer-events: none;
     z-index: 1;
 
     /* @Todo - we need to be sure this is deprecated since the color sems to be the correct gray I see in specs */
