fix(global-search): Update global search to use new combobox group (#3168)
* fix(global-search): Update global search to use new combobox group

* Update IDs

* Update snapshots

* Lint

* Update snapshots

* Update snapshots

* Make IDs unique

* Remove color property that caused regression

* Update snapshots

* Update snapshots...

* Update snapshots

* Remove title and AT from icons

* Update copy to point to dynamic menu ref

* Update snapshots

--- a/packages/design-system/ui/components/combobox/base/_index.scss
+++ b/packages/design-system/ui/components/combobox/base/_index.scss
@@ -50,7 +50,6 @@
     .slds-combobox__input.slds-has-focus {
       width: 0;
       pointer-events: auto;
-      padding: 0 ($spacing-large + $spacing-xx-small);
     }
 
     .slds-input__icon {
@@ -374,6 +373,10 @@
     &.slds-has-focus {
       width: 160px;
     }
+  }
+
+  .slds-input__icon {
+    margin-top: (($square-icon-small-content / 2) * -1);
   }
 
   .slds-icon {
