--- a/packages/design-system/ui/components/spinners/base/_index.scss
+++ b/packages/design-system/ui/components/spinners/base/_index.scss
@@ -40,6 +40,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: ($z-index-spinner + 1);
   transform: translate(-50%, -50%) rotate(90deg);
 }
 
