--- a/packages/design-system/ui/components/data-tables/inline-edit/_index.scss
+++ b/packages/design-system/ui/components/data-tables/inline-edit/_index.scss
@@ -156,7 +156,7 @@
  * @selector .slds-cell-edit
  * @restrict .slds-table_edit th, .slds-table_edit td
  */
-.slds-cell-edit {
+.slds-table .slds-cell-edit {
   outline: 0; // @TODO: This came from `has-focus` (watch for overreaching)
 
   &.slds-has-focus { // This is the focused state
