fix(form-legend): Add styling for compound form with a tooltip icon next to the legend (#3151)
* fix(form-legend): Add example in compound form for a tooltip icon next to the legend

* fix(form-legend): export compoundForm for future use

* fix(form-legend): Add tests

* fix(form-legend): Attach styling to new class instead of utility

* fix(form-legend-icon): Remove example

* fix(form-legend-icon): Update docs to include form layout info and legend icon blockquote

* fix(form-legend-icon): remove form-layout from the components list

* fix(form-legend-icon): Add inline help as example in input

* fix(form-legend-icon): Remove inline class

* fix(form-legend): Skip test for now

* Update tests

--- a/packages/design-system/ui/components/form-layout/base/_index.scss
+++ b/packages/design-system/ui/components/form-layout/base/_index.scss
@@ -82,6 +82,7 @@
  *
  * @selector .slds-form_inline
  * @restrict .slds-form
+ * @modifier
  */
 .slds-form_inline,
 .slds-form--inline {
@@ -114,4 +115,14 @@
       margin-bottom: 0;
     }
   }
+}
+
+/**
+ * @summary Aligns the legend properly when there is an info tooltip
+ *
+ * @selector .slds-form-element__legend_has-tooltip
+ * @restrict .slds-form-element__legend
+ */
+.slds-form-element__legend_has-tooltip {
+  float: left;
 }
