Fix/icon component sizes (#3157)
* (fix: icons) Add xx-small docs

* fix (icon): correct component sizes

* fix (icon): fix lint errors

* fix(icons): update documentation

* fix(icons): fix typo

* fix(icons): update a11y docs

* fix(icons): update a11y grammar

--- a/packages/design-system/ui/components/icons/base/_index.scss
+++ b/packages/design-system/ui/components/icons/base/_index.scss
@@ -97,6 +97,12 @@ $bg-standard-map: map-merge($task2-monkey-patch, $bg-standard-map);
   }
 }
 
+/**
+ * @selector .slds-icon_xx-small
+ * @restrict .slds-icon
+ * @modifier
+ * @group size
+ */
 .slds-icon_xx-small,
 .slds-icon--xx-small {
   @include square($square-icon-xx-small-content);
